add title screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     <string name="cat8">Places</string>
     <string name="cat9">Jokes</string>
     <string name="startButton">start</string>
-    <string name="score">Score:</string>
+    <string name="score">Tap to start</string>
     <string name="categoriesTitle">Categories</string>
 </resources>
