--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="startButton">start</string>
     <string name="score">Tap to start</string>
     <string name="categoriesTitle">Categories</string>
+    <string name="ret">RETURN</string>
+    <string name="right">Correct:</string>
+    <string name="wrong">Wrong:</string>
+    <string name="Total">Total:</string>
 </resources>
